--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Granny</string>
+
+    <!--  Enter activity  -->
+    <string name="enter_btn">начать</string>
+
+    <!--  Main activity  -->
+    <string name="title_ma_morning">Доброе утро!\nЧто будем готовить?</string>
 </resources>
